overlapping fixed

--- a/css/todostyles.css
+++ b/css/todostyles.css
@@ -37,14 +37,13 @@ div{
 
 }
 
-/* .add{
-    float: left;
-    margin: 0 2 0 0;
+.add{
+  min-width: fit-content;
 }
 
 .ttd{
-    float: right;
-} */
+   min-width: width fit;
+} 
 
 
 
